--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6130,6 +6130,39 @@ margin: 5px auto;
 
 
 /* next ui modal css */
+.tron-swap {
+  background: #1d2328 !important;
+  border-radius: 10px !important;
+  padding: 30px !important;
+}
+
+.tron-swap .nextui-c-cgxxHA{
+  background: #1d2328 !important;
+  color: white !important;
+}
+
+.tron-swap .nextui-c-igVEsI{
+  color: white !important;
+  font-size: 20px !important;
+}
+
+.tron-swap .nextui-c-iDzHRq{
+  color: white !important;
+  font-size: 16px !important;
+  text-align: center !important;
+}
+.tron-swap .nextui-c-gYbKeQ{
+  justify-content: center !important;
+}
+.tron-swap .nextui-c-iDzHRq{
+  padding-top: 0px !important;
+}
+.tron-swap .connect-wallet{
+  padding: 10px 100px !important;
+}
+
+
+/* next ui modal css */
 .tron-swap1 {
   background: #1d2328 !important;
   border-radius: 10px !important;
@@ -6226,9 +6259,26 @@ margin: 5px auto;
 .tron-swap01 .connect-wallet{
   padding: 10px 100px !important;
 }
+.span {
+  float: right;
+}
 
-
-
+.connect-wallet1 {
+  background: linear-gradient( 68deg, rgba(29, 35, 40, 1) 0%, rgba(29, 35, 40, 1) 21%, rgba(45, 52, 57, 1) 100% ) !important;
+  color: white !important;
+  padding: 5px 15x !important;
+  border: none !important;
+  border-radius: 25px !important;
+  font-size: 12px !important;
+  height: 30px;
+  width: 70px !important;
+  font-weight: bold !important;
+  border: 1px solid #1f73f253 !important;
+  position: relative !important;
+  box-shadow: rgb(255 255 255 / 0%) 0px -19px 0px, rgb(182 182 182 / 12%) 0px -9px 27px, rgb(0 0 0 / 38%) 0px 8px 12px, rgb(255 255 255 / 0%) 0px 12px 13px, rgb(255 255 255 / 0%) 0px -60px 5px !important;
+  white-space: nowrap;
+  /* cursor: pointer; */
+}
 
 
 
@@ -12890,3 +12940,280 @@ line-height: 28px;
 
 
 
+
+
+/* Staking Modal */
+
+.nextui-c-gYbKeQ-ibZmKkd-css {
+  justify-content: center !important;
+}
+
+.nextui-c-gYbKeQ {
+  display: flex;
+  flex-wrap: wrap;
+  flex-shrink: 0;
+  overflow: hidden;
+  color: inherit;
+  align-items: center;
+  font-size: var(--nextui-fontSizes-xs);
+  padding: var(--nextui-space-sm) var(--nextui-space-lg);
+  background: #1d2328 !important;
+}
+
+
+.nextui-c-iDzHRq {
+    display: flex;
+    flex-direction: column;
+    flex: 1 1 auto;
+    padding: var(--nextui-space-sm) var(--nextui-space-10);
+    overflow-y: auto;
+    position: relative;
+    text-align: left;
+    background: #1d2328 !important;
+    color: white !important;
+    padding: 30px 20px;
+}
+
+.nextui-c-iDzHRq-drcJWu-autoMargin-true > * {
+  padding: 5px !important;
+  border-radius: 10px !important;
+}
+
+.nextui-c-iDzHRq-drcJWu-autoMargin-true > * {
+  margin-bottom: 0rem !important;
+}
+
+
+
+
+.nextui-c-eKxzBn-dKxaWC-isStatic-true {
+  cursor: text;
+  color: white;
+  user-select: text;
+}
+
+.stakeWithdraw-back{
+  float: left;
+  width: 100%;
+  height: 20px;
+  width: 20px;
+}
+
+.stakeWithdraw-backDiv {
+  float: left;
+  width: 100%;
+  padding-left: 100px;
+  cursor: pointer;
+
+}
+
+#stakingDashbaord-back{
+  display: flex;
+  justify-content: space-between;
+  float: left;
+  width: 100%;
+  margin-top: 10px;
+  padding-left: 70px;
+  cursor: pointer;
+}
+
+/* staking Modal */
+.nextui-c-gYbKeQ-ibZmKkd-css {
+  justify-content: center !important;
+}
+
+.nextui-c-gYbKeQ {
+  display: flex;
+  flex-wrap: wrap;
+  flex-shrink: 0;
+  overflow: hidden;
+  color: inherit;
+  align-items: center;
+  font-size: var(--nextui-fontSizes-xs);
+  padding: var(--nextui-space-sm) var(--nextui-space-lg);
+  background: #1d2328 !important;
+}
+
+
+.nextui-c-iDzHRq {
+    display: flex;
+    flex-direction: column;
+    flex: 1 1 auto;
+    padding: var(--nextui-space-sm) var(--nextui-space-10);
+    overflow-y: auto;
+    position: relative;
+    text-align: left;
+    background: #1d2328 !important;
+    color: white !important;
+    padding: 30px 20px;
+}
+
+.nextui-c-iDzHRq-drcJWu-autoMargin-true > * {
+  padding: 10px;
+  border-radius: 10px !important;
+}
+
+
+.nextui-c-eKxzBn-dKxaWC-isStatic-true {
+  cursor: text;
+  color: white;
+  user-select: text;
+}
+
+.nextui-c-iDzHRq-drcJWu-autoMargin-true > * {
+  margin-bottom: 0rem !important;
+}
+
+.connect-wallet1 {
+  background: linear-gradient(
+    68deg,
+    rgba(29, 35, 40, 1) 0%,
+    rgba(29, 35, 40, 1) 21%,
+    rgba(45, 52, 57, 1) 100%
+  ) !important;
+  color: white !important;
+  padding: 3px 15x !important;
+  border: none !important;
+  border-radius: 25px !important;
+  font-size: 14px !important;
+  font-weight: bold !important;
+  border: 1px solid #1f73f253 !important;
+  position: relative !important;
+  box-shadow: rgb(255 255 255 / 0%) 0px -19px 0px,
+    rgb(182 182 182 / 12%) 0px -9px 27px, rgb(0 0 0 / 38%) 0px 8px 12px,
+    rgb(255 255 255 / 0%) 0px 12px 13px, rgb(255 255 255 / 0%) 0px -60px 5px !important;
+  white-space: nowrap;
+  /* cursor: pointer; */
+}
+
+.span{
+ float: right;
+}
+
+.connect-wallet2 {
+  background: #b30000 !important;
+  color: white !important;
+  padding: 3px 15x !important;
+  border: none !important;
+  border-radius: 25px !important;
+  font-size: 14px !important;
+  font-weight: bold !important;
+  border: 1px solid #1f73f253 !important;
+  position: relative !important;
+  box-shadow: rgb(255 255 255 / 0%) 0px -19px 0px,
+    rgb(182 182 182 / 12%) 0px -9px 27px, rgb(0 0 0 / 38%) 0px 8px 12px,
+    rgb(255 255 255 / 0%) 0px 12px 13px, rgb(255 255 255 / 0%) 0px -60px 5px !important;
+  white-space: nowrap;
+  /* cursor: pointer; */
+}
+
+.span{
+ float: right;
+}
+
+.nextui-c-jeuecp:disabled{
+  color: black !important;
+}
+
+
+
+/*------------------- Stacking 1 section starts ----------------------*/
+.stake-stake {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.stake-stake input.form-control {
+  background: transparent;
+  border: unset;
+  padding: 12px 0px 12px 15px;
+  color: white !important;
+}
+
+.stake-stake input.form-control::placeholder{
+  color: gray !important;
+}
+
+.stake-stake span#basic-addon2 {
+  border: unset;
+  background: transparent linear-gradient(180deg, #191B1E 0%, #24282D 0%, #18191C 100%) 0% 0% no-repeat padding-box;
+  border-radius: 0px 25px 25px 0px;
+  color: white;
+  font-size: 16px;
+  width: 30%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 6px 0px 6px 0;
+}
+.stacking-cards .scard-table span {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+}
+
+.stacking-cards .scard-table span img {
+  width: 19%;
+}
+.stake-stake .input-group.mb-3 {
+  width: 70%;
+  background: #24272C 0% 0% no-repeat padding-box;
+  box-shadow: inset 0px 4px 9px #05050580, 11px 11px 20px #00000080;
+  border-radius: 25px;
+}
+
+.stak-min {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.stak-min  p {
+  margin-bottom: 0;
+  font-size: 14px;
+  color: #EDEFF2;
+  width: 50%;
+  text-align: center;
+  margin-: 3px;
+  margin: 10px 0px 25px 0;
+}
+.king-a {
+  display: flex;
+  gap: 10px;
+  justify-content: center;
+  align-items: center;
+  text-decoration: none;
+  color: white;
+}
+
+.king-a img {
+  width: 5% !important;
+}
+
+#stacking-cards1 {
+  /* justify-content: space-around !important; */
+  justify-content: flex-start;
+ gap: 50px;
+
+}
+
+#stacking-cards1 .live {
+  color: white;
+  text-align: center;
+  background: transparent linear-gradient(269deg, #24272C 0%, #2774de 53%, #24272C 100%) 0% 0% no-repeat padding-box;
+}
+
+#stacking-cards1 .upcoming {
+  color: white;
+  text-align: center;
+  background: transparent linear-gradient(269deg, #24272C 0%, #E95538 53%, #24272C 100%) 0% 0% no-repeat padding-box;
+}
+
+/*------------------- Stacking 1 section ends ----------------------*/
+
+.linkhref a{
+  color: white !important;
+  text-decoration: none !important;
+}
